# youtube-music-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  install.sh  publish.sh  pyproject.toml  requirements.txt  run.sh
.github/workflows/: ci.yml
app/: __main__.py  bot.py  config.py  database.py  downloader.py  logging_setup.py  utils.py
app/handlers/: admin.py  user.py
tests/: conftest.py  test_database.py  test_downloader.py  test_handlers.py
