[project]
name = "youtube-music-bot"
version = "1.0.0"
description = "Telegram bot that downloads YouTube / YouTube Music tracks as MP3 with cover art."
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
